--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "ext-json": "*",
     "ext-iconv": "*",
     "ext-mbstring": "*",
-    "topthink/framework": "^6.0"
+    "topthink/framework": "^6.0",    
+    "phpoffice/phpspreadsheet": "^1.14"
   },
   "autoload": {
     "files": [
