--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "ext-json": "*",
     "ext-iconv": "*",
     "ext-mbstring": "*",
-    "topthink/framework": "^6.0",    
-    "phpoffice/phpspreadsheet": "^1.14"
+    "topthink/framework": "^6.0"
   },
   "autoload": {
     "files": [
