--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
   "type": "library",
-  "name": "zoujingli/think-library",
+  "name": "topextend/think-library",
   "license": "MIT",
-  "homepage": "http://thinkadmin.top",
   "description": "ThinkPHP v6.0 Development Library",
   "authors": [
     {
-      "name": "Anyon",
-      "email": "zoujingli@qq.com"
+      "name": "Jarmin",
+      "email": "edshop@qq.com"
     }
   ],
   "require": {
